--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   nav_router: any
   mqtt_client: 5.6.3
   fluttertoast: ^3.1.3
+  flutter_bloc: ^6.0.6 #状态管理框架
+  equatable: ^1.2.3 #增强组件相等性判断
+
 
 dev_dependencies:
   flutter_test:
